[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"
# setup.py is retained for custom CMakeExtension / CMakeBuild logic

[project]
name = "qpandalite"
dynamic = ["version"]
description = "QPanda-Lite. A python-native version for pyqpanda. Simple, easy, and transparent."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Agony", email = "chenzhaoyun@iai.ustc.edu.cn" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
]
dependencies = [
    "numpy",
    "requests",
    "pandas",
    "seaborn",
    "matplotlib",
    "rb_generator",
    "pybind11-stubgen",
    "qiskit",
    "qiskit-aer",
    "qutip",
    "qutip-qip",
    "pyqpanda3",
    "pyyaml>=6.0",
    "sympy>=1.12",
]

[project.urls]
"Source Code" = "https://github.com/Agony5757/QPanda-Lite.git"

[project.optional-dependencies]
pytorch = ["torch>=2.0"]

[tool.setuptools]
zip-safe = false
packages = { find = { exclude = ["qpandalite.test", "qpandalite.test.*"] } }

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "N801", "N803", "N806"]  # line length; CapWords for ErrorLoader subclasses; lowercase for math vars (U,H,K,E physics notation)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
]

[tool.setuptools_scm]
write_to = "qpandalite/_version.py"
fallback_version = "0.0.0"

[tool.setuptools.package-data]
"qpandalite" = ["test/QASMBench.pkl", "*.pyi"]
"qpandalite.simulator" = ["qpandalite_cpp.pyi"]
