[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"
# setup.py is retained for custom CMakeExtension / CMakeBuild logic

[project]
name = "qpandalite"
dynamic = ["version"]
description = "QPanda-Lite. A python-native version for pyqpanda. Simple, easy, and transparent."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Agony", email = "chenzhaoyun@iai.ustc.edu.cn" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
]
dependencies = [
    "numpy",
    "requests",
    "pyyaml>=6.0",
    "typing-extensions>=4.0",
]

[project.urls]
"Source Code" = "https://github.com/Agony5757/QPanda-Lite.git"

[project.optional-dependencies]
quafu = ["pyquafu>=0.4.0"]
qiskit = ["qiskit>=1.0", "qiskit-ibm-provider>=0.10", "qiskit-aer"]
originq = ["pyqpanda3>=3.0"]
simulation = ["qutip>=5.0", "qutip-qip>=0.4"]
visualization = ["matplotlib", "seaborn", "pandas"]
analysis = ["scipy", "sympy>=1.12", "rb_generator"]
pytorch = ["torch>=2.0"]
all = ["qpandalite[quafu,qiskit,originq,simulation,visualization,analysis,pytorch]"]

[tool.setuptools]
zip-safe = false
packages = [
    "qpandalite",
    "qpandalite.algorithmics",
    "qpandalite.algorithmics.ansatz",
    "qpandalite.algorithmics.circuits",
    "qpandalite.algorithmics.measurement",
    "qpandalite.algorithmics.state_preparation",
    "qpandalite.analyzer",
    "qpandalite.circuit_builder",
    "qpandalite.originir",
    "qpandalite.pytorch",
    "qpandalite.qasm",
    "qpandalite.qcloud_config",
    "qpandalite.simulator",
    "qpandalite.task",
    "qpandalite.task.adapters",
    "qpandalite.task.ibm",
    "qpandalite.task.origin_qcloud",
    "qpandalite.task.originq",
    "qpandalite.task.originq_dummy",
    "qpandalite.task.platform_template",
    "qpandalite.task.quafu",
    "qpandalite.transpiler",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "N801", "N803", "N806"]  # line length; CapWords for ErrorLoader subclasses; lowercase for math vars (U,H,K,E physics notation)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
]

[tool.setuptools_scm]
write_to = "qpandalite/_version.py"
fallback_version = "0.0.0"

[tool.setuptools.package-data]
"qpandalite" = ["*.pyi"]
"qpandalite.simulator" = ["qpandalite_cpp.pyi"]
